--- a/package.json
+++ b/package.json
@@ -1,24 +1,41 @@
 {
   "name": "@dev-geeks/react-social-sharing-buttons",
-  "version": "0.2.0",
+  "version": "0.6.2",
   "private": false,
-  "dependencies": {
-    "@material-ui/core": "4.4.3",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "fg-loadcss": "2.1.0",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-jss": "10.0.0",
-    "react-scripts": "3.1.2",
-    "typescript": "3.6.3"
-  },
+  "main": "build/index.js",
+  "types": "./src/types.d.ts",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --watch",
+    "build": "webpack"
+  },
+  "author": {
+    "name": "Orkhan Rzazade",
+    "email": "o.rzazade@gmail.com"
+  },
+  "peerDependencies": {
+    "@material-ui/core": "4.4.3",
+    "fg-loadcss": "2.1.0",
+    "react-jss": "10.0.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
+  },
+  "devDependencies": {
+    "@material-ui/core": "4.4.3",
+    "fg-loadcss": "2.1.0",
+    "react-jss": "10.0.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "path": "^0.12.7",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^3.2.1"
   },
   "repository": {
     "type": "git",
@@ -35,26 +52,10 @@
     "google",
     "react-social-sharing-buttons"
   ],
-  "author": "Michal Szorad, miso.szorad@gmail.com",
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "licenses": [
     {
       "type": "MIT",
       "url": "https://github.com/ORzazade/react-social-sharing-buttons/blob/master/LICENSE"
     }
-  ],
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  ]
 }
